Feature #718
Remote components connection options: bug fix for conf.xml URL on Windows.