@@ -71,6 +71,7 @@ import org.slf4j.LoggerFactory;
 
 public class OptionsDialog extends AbstractWindow {
     private static final long serialVersionUID = 1L;
+    private static final String CONFIGURATION_FILE_NAME = "conf.xml";
     private static final Logger logger = LoggerFactory.getLogger(OptionsDialog.class);
 
     private final ImageManager imageManager = ImageManager.get();
@@ -116,9 +117,11 @@ public class OptionsDialog extends AbstractWindow {
 
     private URL getDataCleanerConfigurationFileURI() {
         try {
-            String path = "file://" + _configuration.getHomeFolder().toFile().getAbsolutePath() + "/conf.xml";
+            String path = _configuration.getHomeFolder().toFile().getAbsolutePath() +
+                    File.separator + CONFIGURATION_FILE_NAME;
+            File file = new File(path);
 
-            return new URL(path);
+            return file.toURI().toURL();
         } catch (MalformedURLException e) {
             logger.warn("Configuration file was not found: " + e.getMessage());
         }
@@ -415,7 +418,8 @@ public class OptionsDialog extends AbstractWindow {
         DCLabel descriptionLabel = DCLabel
                 .darkMultiLine("Performance options are currently not configurable while you're running the application. "
                         + "You need to edit the applications configuration file for this. The configuration file is named "
-                        + "<b>conf.xml</b> and is located in the root of the folder where you've installed DataCleaner.");
+                        + "<b>" + CONFIGURATION_FILE_NAME + "</b> and is located in the root of the folder where "
+                        + "you've installed DataCleaner.");
         descriptionLabel.setBorder(new EmptyBorder(10, 10, 0, 10));
         WidgetUtils.addToGridBag(descriptionLabel, panel, 0, row, 2, 1);
         return panel;
